@@ -120,6 +120,9 @@ Core
 * Pass applylocale option into Vend::Form::options_to_array in order to
   localize option labels (#80).
 
+* New set_process_name sub which is used to change the status in the process
+  name indicator.
+
 UserDB
 ------
 
